@@ -1,5 +1,5 @@
 Package: @source_basename@-source-@version@
-Build-Profiles: <!stage1>
+Build-Profiles: <!stage1 !pkg.linux.nosource>
 Architecture: all
 Section: kernel
 Depends: binutils, xz-utils, ${misc:Depends}
