@@ -3,6 +3,9 @@ linux (4.17~rc3-1~exp2) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * Disable building linux-doc-* and tools documentation when the "nodoc"
     build profile is used.
+  * Add new "pkg.linux.nosource" build profile that disables building the
+    linux-source-* package, and a "[packages] source" option for the
+    debian/config/defines file that defines the default behaviour.
 
   [ John Paul Adrian Glaubitz ]
   * [m68k] Enable CONFIG_PATA_GAYLE as module.
